<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.giovibal.mqtt</groupId>
    <artifactId>vertx-mqtt-broker</artifactId>
    <packaging>jar</packaging>
    <version>2.2.5</version>
    <name>MQTT Broker based on Vert.x</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <vertx.version>3.3.2</vertx.version>
        <vertx.scope>provided</vertx.scope>
        <wso2.scope>provided</wso2.scope>
    </properties>


    <repositories>
        <repository>
            <id>sonatype-nexus-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
        <repository>
            <id>eclipse-paho-releases</id>
            <url>https://repo.eclipse.org/content/repositories/paho-releases/</url>
        </repository>
        <repository>
            <id>wso2-maven2-repository</id>
            <url>http://maven.wso2.org/nexus/content/groups/public/</url>
        </repository>
    </repositories>


    <dependencies>
        <dependency>
            <groupId>io.vertx</groupId>
            <artifactId>vertx-core</artifactId>
            <version>${vertx.version}</version>
            <scope>${vertx.scope}</scope>
        </dependency>
        <dependency>
            <groupId>io.vertx</groupId>
            <artifactId>vertx-hazelcast</artifactId>
            <version>${vertx.version}</version>
            <scope>${vertx.scope}</scope>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.4</version>
            <scope>${vertx.scope}</scope>
        </dependency>

        <dependency>
            <groupId>org.wso2.carbon.commons</groupId>
            <artifactId>org.wso2.carbon.identity.oauth.stub</artifactId>
            <version>4.4.7</version>
            <scope>${wso2.scope}</scope>
        </dependency>

        <!--Test dependencies-->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.paho</groupId>
            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
            <version>1.1.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk16</artifactId>
            <version>1.46</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <!-- Other plugins required by the build -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Main-Class>io.github.giovibal.mqtt.Main</Main-Class>
                                    </manifestEntries>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                    <resource>META-INF/services/io.vertx.core.spi.VerticleFactory</resource>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                    <resource>META-INF/cxf/bus-extensions.txt</resource>
                                </transformer>
                            </transformers>
                            <artifactSet>
                                <!-- By default all the deps go into the fat jar, but we don't need some so we can exclude them
                                here -->
                                <excludes>
                                    <exclude>io.vertx:vertx-codegen</exclude>
                                    <exclude>junit:junit</exclude>
                                    <exclude>org.mvel:mvel2</exclude>
                                    <exclude>log4j:log4j</exclude>
                                    <exclude>org.slf4j:slf4j-api</exclude>
                                </excludes>
                            </artifactSet>
                            <outputFile>${project.build.directory}/${artifactId}-${version}-fat.jar</outputFile>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.5.4</version>
            </plugin>
        </plugins>
    </build>


    <profiles>
        <profile>
            <id>include-vertx</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <vertx.scope>compile</vertx.scope>
            </properties>
        </profile>
        <profile>
            <id>include-wso2-auth</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <wso2.scope>compile</wso2.scope>
            </properties>
        </profile>

        <profile>
            <id>metrics</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>io.vertx</groupId>
                    <artifactId>vertx-dropwizard-metrics</artifactId>
                    <version>${vertx.version}</version>
                </dependency>
            </dependencies>
        </profile>


        <profile>
            <id>win32</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-resources-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>copy-resources-win32</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>copy-resources</goal>
                                </goals>
                                <configuration>
                                    <outputDirectory>${basedir}/target/win32</outputDirectory>
                                    <resources>
                                        <resource>
                                            <directory>src/main/win32</directory>
                                            <excludes>
                                                <exclude>README.md</exclude>
                                                <exclude>*.exe</exclude>
                                            </excludes>
                                            <filtering>true</filtering>
                                        </resource>
                                        <resource>
                                            <directory>src/main/win32</directory>
                                            <includes>
                                                <include>*.exe</include>
                                            </includes>
                                            <filtering>false</filtering>
                                        </resource>
                                        <resource>
                                            <directory>${basedir}/target</directory>
                                            <includes>
                                                <include>*-fat.jar</include>
                                            </includes>
                                            <filtering>false</filtering>
                                        </resource>
                                    </resources>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <artifactId>maven-assembly-plugin</artifactId>
                        <executions>
                            <execution>
                                <configuration>
                                    <descriptor>src/main/assembly/win32.xml</descriptor>
                                </configuration>
                                <id>create-archive-win32</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>single</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
